// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assistive Text renders large AssistiveText 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #6A6A6A;
}

.emotion-0:disabled {
  color: #ABABAB;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text renders medium AssistiveText 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #6A6A6A;
}

.emotion-0:disabled {
  color: #ABABAB;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text renders small AssistiveText 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #6A6A6A;
}

.emotion-0:disabled {
  color: #ABABAB;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1:disabled {
  color: #ABABAB;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text should render disabled Assistive Text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #ABABAB;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #ABABAB;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      aria-disabled="true"
      class="emotion-1"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text should render invalid Assistive Text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #D60000;
}

.emotion-1 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #D60000;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <p
      aria-live="polite"
      class="emotion-1"
      role="alert"
    >
      Assistive Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text should render logical props overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #6A6A6A;
  margin-block: 30px;
}

.emotion-0:disabled {
  color: #ABABAB;
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.emotion-2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #3358CC;
  fill: #3358CC;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-2 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-2 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-2.emotion-2 {
  width: 24px;
  height: 24px;
  color: #3358CC;
  fill: #3358CC;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-2.emotion-2 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-2.emotion-2 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4 {
  margin: 0;
  padding-block: 30px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #6A6A6A;
  padding-block: 30px;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-4:disabled {
  color: #ABABAB;
}

.emotion-5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-2 emotion-3"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </div>
    <p
      class="emotion-4"
    >
      Assistive Text
    </p>
    <div
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2 emotion-3"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Assistive Text should render with enhancer 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 12px;
  color: #6A6A6A;
}

.emotion-0:disabled {
  color: #ABABAB;
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.emotion-2 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #6A6A6A;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-2:disabled {
  color: #ABABAB;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      start
    </div>
    <p
      class="emotion-2"
    >
      Assistive Text
    </p>
    <div
      class="emotion-3"
    >
      start
    </div>
  </div>
</DocumentFragment>
`;
